tests/ui/raw_missing_expr.stderr
error: @raw must be followed by an expression
  --> tests/ui/raw_missing_expr.rs:19:5
   |
19 |     sset!(pico, (0,0), @raw, None).unwrap();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `$crate::define_tail_optional_macro` which comes from the expansion of the macro `sset` (in Nightly builds, run with -Z macro-backtrace for more info)
